added commands to run